[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Sam <samuelkeiffer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.16.1"
itertools = "0.12.0"
rayon = "1.8.0"
text_io = "0.1.12"
num = "0.4.1"
